# task_manager

./: .coverage  .env_example  DEVLOG.md  Makefile  README.md  coverage.xml  pyproject.toml
.github/workflows/: my_tests.yml
locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/: functions.py  mixins.py  rollbar_test.py  settings.py  urls.py  views.py
task_manager/labels/: forms.py  models.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/statuses/: forms.py  mixins.py  models.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/tasks/: admin.py  filter.py  forms.py  models.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0003_alter_task_options_task_description_task_executor_and_more.py  0004_task_labels.py  0005_alter_task_labels.py
task_manager/templates/: base.html  form.html  header.html  index.html  root.html
task_manager/templates/labels/: create.html  delete.html  index.html  update.html
task_manager/templates/registration/: login.html
task_manager/templates/statuses/: create.html  delete.html  index.html  update.html
task_manager/templates/tasks/: create.html  delete.html  filter.html  index.html  show_task.html  update.html
task_manager/templates/users/: create.html  delete.html  index.html  update.html
task_manager/users/: admin.py  forms.py  mixins.py  models.py  tests.py  urls.py  views.py
tests/: test_smoke.py
