[project]
name = "hexlet-code"
version = "0.1.0"
description = "project on django"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["task_manager"]

[dependency-groups]
dev = [
    "dj-database-url>=3.0.1",
    "python-dotenv>=1.2.1",
    "ruff>=0.14.3",
]
