[project]
name = "hexlet-code"
version = "0.1.0"
description = "project on django"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dj-database-url>=3.0.1",
    "django>=5.2.7",
    "django-bootstrap5>=25.3",
    "django-filter>=25.2",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["task_manager"]

[dependency-groups]
dev = [
    "coverage>=7.12.0",
    "django-extensions>=4.1",
    "pytest-cov>=7.0.0",
    "python-dotenv>=1.2.1",
    "rollbar>=1.3.0",
    "ruff>=0.14.3",
]
